<resources>
    <string name="app_name">Note</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>

    <string name="passwordforget">Forgot password?</string>

    <string name="username">Username</string>
    <string name="phonenumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>

    <string name="haveaccount">Already have an account?</string>





</resources>
