
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="25dp"
    android:weightSum="1">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/note_logo"/>



    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etSignUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etSignUpConfirmPasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:hint="@string/confirmpassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/mobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:hint="@string/phonenumber" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_marginTop="25dp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="SIGN UP"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/bluebutton"
        android:id="@+id/signUp" />

    <TextView
        android:layout_marginBottom="7dp"
        android:layout_marginTop="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text="@string/haveaccount"/>


    <Button
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="LOG IN"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/whitebutton"
        android:id="@+id/signIn" />


</LinearLayout>

</ScrollView>

</android.support.design.widget.CoordinatorLayout>
